--- a/BDSS.bib
+++ b/BDSS.bib
@@ -6,3 +6,11 @@
   year={2004},
   organization={IEEE}
 }
+@inproceedings{bruno2004rolls,
+  title={Rolls: modifying a standard system installer to support user-customizable cluster frontend appliances},
+  author={Bruno, Greg and Katz, Mason J and Sacerdoti, Federico D and Papadopoulos, Philip M},
+  booktitle={Cluster Computing, 2004 IEEE International Conference on},
+  pages={421--430},
+  year={2004},
+  organization={IEEE}
+}
