--- a/BDSS.bib
+++ b/BDSS.bib
@@ -14,3 +14,13 @@
   year={2004},
   organization={IEEE}
 }
+@article{kircher1999dove,
+  title={DOVE: a distributed object visualization environment},
+  author={Kircher, Michael and Schmidt, Douglas C},
+  journal={C++ Report},
+  volume={11},
+  number={3},
+  pages={42--51},
+  year={1999},
+  publisher={SIGS Publications, Inc.}
+}
